# Semantics-vs-Syntax-NLP-Game

./: README.md  app.py  compare.py  constants.py  main.py  pyproject.toml  semantics.py  syntax.py
